@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.007.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.008.
 use strict;
 use warnings;
 
@@ -53,6 +53,7 @@ my %WriteMakefileArgs = (
     "Dist::Zilla::Plugin::MetaJSON" => 0,
     "Dist::Zilla::Plugin::MetaNoIndex" => 0,
     "Dist::Zilla::Plugin::MetaProvides::Package" => 0,
+    "Dist::Zilla::Plugin::MetaResources" => 0,
     "Dist::Zilla::Plugin::MetaYAML" => 0,
     "Dist::Zilla::Plugin::ModuleBuildTiny" => 0,
     "Dist::Zilla::Plugin::ModuleBuildTiny::Fallback" => 0,
@@ -87,7 +88,7 @@ my %WriteMakefileArgs = (
     "Test::File::ShareDir::Module" => 0,
     "Test::More" => "0.88"
   },
-  "VERSION" => "0.031",
+  "VERSION" => "0.032",
   "test" => {
     "TESTS" => "t/*.t"
   }
@@ -124,6 +125,7 @@ my %FallbackPrereqs = (
   "Dist::Zilla::Plugin::MetaJSON" => 0,
   "Dist::Zilla::Plugin::MetaNoIndex" => 0,
   "Dist::Zilla::Plugin::MetaProvides::Package" => 0,
+  "Dist::Zilla::Plugin::MetaResources" => 0,
   "Dist::Zilla::Plugin::MetaYAML" => 0,
   "Dist::Zilla::Plugin::ModuleBuildTiny" => 0,
   "Dist::Zilla::Plugin::ModuleBuildTiny::Fallback" => 0,
