@@ -11,7 +11,8 @@ prefix = profiles/default/skel
 include_dotfiles = 1
 
 [@Author::DBOOK]
-:version = 0.020
+:version = 0.032
+irc = irc://irc.perl.org/#distzilla
 pod_tests = syntax
 Git::GatherDir.exclude_match[0] = ^profiles/default/skel/
 
