@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Add irc option to set x_IRC resource metadata
 
 0.031     2016-09-29 15:35:49 EDT
   - Regenerate files for release commit automatically
